Update liblnk to alpha 20130413 The examples are now on the project web site
Approved by:	eadler
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316199 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/liblnk/Makefile
+++ b/devel/liblnk/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	liblnk
-PORTVERSION=	20130304
+PORTVERSION=	20130413
 CATEGORIES=	devel
 MASTER_SITES=	GOOGLE_CODE
 DISTNAME=	${PORTNAME}-alpha-${PORTVERSION}
@@ -26,10 +26,9 @@ WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
 MAN1=		lnkinfo.1
 MAN3=		liblnk.3
 
-OPTIONS_DEFINE=	DOCS EXAMPLES
+OPTIONS_DEFINE=	DOCS
 
 PORTDOCS=	AUTHORS ChangeLog
-PORTEXAMPLES=	*
 
 .include <bsd.port.options.mk>
 
@@ -37,11 +36,6 @@ post-install:
 .if ${PORT_OPTIONS:MDOCS}
 	@${MKDIR} ${DOCSDIR}
 	${INSTALL_DATA} ${PORTDOCS:S,^,${WRKSRC}/,} ${DOCSDIR}
-.endif
-.if ${PORT_OPTIONS:MEXAMPLES}
-	@${MKDIR} ${EXAMPLESDIR}
-	${INSTALL_DATA} ${WRKSRC}/examples/${PORTNAME}/* \
-		${WRKSRC}/examples/${PORTNAME:S,lib,py,}/* ${EXAMPLESDIR}
 .endif
 
 .include <bsd.port.mk>
