python-registry distfile is available on GH and not on GHC
Approved by:	eadler (mentor)
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316202 35697150-7ecd-e111-bb59-0022644237b5

--- a/security/py-python-registry/Makefile
+++ b/security/py-python-registry/Makefile
@@ -4,6 +4,7 @@
 PORTNAME=	python-registry
 PORTVERSION=	0.2.5
 CATEGORIES=	security devel python
+MASTER_SITES=	GH
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	antoine@FreeBSD.org
