--- a/misc/p5-Text-FIGlet/Makefile
+++ b/misc/p5-Text-FIGlet/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	Text-FIGlet
-PORTVERSION=	2.19
+PORTVERSION=	2.19.3
 CATEGORIES=	misc perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -15,7 +15,8 @@ LICENSE=	ART10 GPLv1
 LICENSE_COMB=	dual
 
 RUN_DEPENDS=	${LOCALBASE}/bin/figlet:${PORTSDIR}/misc/figlet
-TEST_DEPENDS=	p5-Test-Differences>=0:${PORTSDIR}/devel/p5-Test-Differences
+TEST_DEPENDS=	p5-Test-Differences>=0:${PORTSDIR}/devel/p5-Test-Differences \
+		p5-Test-Pod>=1:${PORTSDIR}/devel/p5-Test-Pod
 
 PERL_CONFIGURE=	yes
 
