- Fix check_ircd.pl so it works   More information: http://www.nntp.perl.org/group/perl.beginners/2011/02/msg115898.html - Trim header
PR:		ports/173638
Submitted by:	Ryan Frederick <ryanrfrederick@gmail.com>
Approved by:	maintainer timeout
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316219 35697150-7ecd-e111-bb59-0022644237b5

--- a/net-mgmt/nagios-plugins/Makefile
+++ b/net-mgmt/nagios-plugins/Makefile
@@ -1,12 +1,9 @@
-# New ports collection makefile for:	nagios-plugins
-# Date created:				14 Jul 2002
-# Whom:					Blaz Zupan <blaz@si.FreeBSD.org>
-#
+# Created by: Blaz Zupan <blaz@si.FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	nagios-plugins
 PORTVERSION=	1.4.16
+PORTREVISION=	1
 PORTEPOCH=	1
 CATEGORIES=	net-mgmt
 MASTER_SITES=	SF/nagiosplug/nagiosplug/${PORTVERSION}
