--- a/archivers/Makefile
+++ b/archivers/Makefile
@@ -128,6 +128,7 @@
     SUBDIR += pbzip2
     SUBDIR += pear-File_Archive
     SUBDIR += pear-Horde_Compress
+    SUBDIR += pear-Horde_Compress_Fast
     SUBDIR += pear-PHP_Archiv
     SUBDIR += pecl-lzf
     SUBDIR += pecl-phk
