Register pear-Horde_Cache_Fast and add dependencies
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316221 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/pear-Horde_Core/Makefile
+++ b/devel/pear-Horde_Core/Makefile
@@ -32,6 +32,7 @@ USE_HORDE_RUN=	Horde_Role \
 		Horde_Cache \
 		Horde_Cli \
 		Horde_Compress \
+		Horde_Compress_Fast \
 		Horde_Controller \
 		Horde_Data \
 		Horde_Date \
