- New port: devel/tcloo
This is a backport for Tcl 8.5 of the Object Oriented layer (TclOO) shipped
with Tcl 8.6.

WWW: http://core.tcl.tk/tcloo/

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316223 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -4292,6 +4292,7 @@
     SUBDIR += tclgetopts
     SUBDIR += tcllib
     SUBDIR += tclmore
+    SUBDIR += tcloo
     SUBDIR += tclreadline
     SUBDIR += tclthread
     SUBDIR += tcltls
