Reassign p5-* ports from skv to perl@ While here trim headers
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316227 35697150-7ecd-e111-bb59-0022644237b5

--- a/databases/p5-DBD-mysql41/Makefile
+++ b/databases/p5-DBD-mysql41/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:   p5-DBD-mysql41
-# Date created:                27 Nov 2003
-# Whom:                        Oliver Eikemeier <eikemeier@fillmore-labs.com>
-#
+# Created by: Oliver Eikemeier <eikemeier@fillmore-labs.com>
 # $FreeBSD$
-#
 
 PKGNAMESUFFIX=	41
 
