--- a/databases/p5-DBD-mysql/Makefile
+++ b/databases/p5-DBD-mysql/Makefile
@@ -8,7 +8,7 @@ MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 DISTNAME=	${PORTNAME}-${PORTVERSION:S/00$//}
 
-MAINTAINER=	skv@FreeBSD.org
+MAINTAINER=	perl@FreeBSD.org
 COMMENT?=	MySQL driver for the Perl5 Database Interface (DBI)
 
 LICENSE=	ART10 GPLv1
