--- a/textproc/p5-XML-LibXSLT/Makefile
+++ b/textproc/p5-XML-LibXSLT/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	XML::LibXSLT
-# Date created:		6 June 2001
-# Whom:			Dom Mitchell <dom@happygiraffe.net>
-#
+# Created by: Dom Mitchell <dom@happygiraffe.net>
 # $FreeBSD$
-#
 
 PORTNAME=	XML-LibXSLT
 PORTVERSION=	1.77
@@ -11,7 +7,7 @@ CATEGORIES=	textproc perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
-MAINTAINER=	skv@FreeBSD.org
+MAINTAINER=	perl@FreeBSD.org
 COMMENT=	Perl interface to the GNOME XSLT library
 
 BUILD_DEPENDS=	p5-XML-LibXML>=1.70:${PORTSDIR}/textproc/p5-XML-LibXML
