--- a/textproc/p5-XML-Quote/Makefile
+++ b/textproc/p5-XML-Quote/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	XML-Quote
-# Date created:	   05 February 2003
-# Whom:		   Sergey Skvortsov <skv@protey.ru>
-#
+# Created by: Sergey Skvortsov <skv@protey.ru>
 # $FreeBSD$
-#
 
 PORTNAME=	XML-Quote
 PORTVERSION=	1.02
@@ -11,7 +7,7 @@ CATEGORIES=	textproc perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
-MAINTAINER=	skv@FreeBSD.org
+MAINTAINER=	perl@FreeBSD.org
 COMMENT=	XML quote/dequote functions
 
 PERL_CONFIGURE=	yes
