--- a/databases/pgbouncer/Makefile
+++ b/databases/pgbouncer/Makefile
@@ -1,16 +1,12 @@
-# Ports collection makefile for:  pgbouncer
-# Date created:			  19 July 2007
-# Whom:				  Sergey Skvortsov <skv@protey.ru>
-#
+# Created by: Sergey Skvortsov <skv@protey.ru>
 # $FreeBSD$
-#
 
 PORTNAME=	pgbouncer
 PORTVERSION=	1.5.2
 CATEGORIES=	databases
 MASTER_SITES=	http://pgfoundry.org/frs/download.php/3293/
 
-MAINTAINER=	skv@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Lightweight connection pooler for PostgreSQL
 
 LICENSE=	BSD
