--- a/devel/ncnf/Makefile
+++ b/devel/ncnf/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	ncnf
-# Date created:	   29 May 2005
-# Whom:		   Sergey Skvortsov <skv@protey.ru>
-#
+# Created by: Sergey Skvortsov <skv@protey.ru>
 # $FreeBSD$
-#
 
 PORTNAME=	ncnf
 PORTVERSION=	3.0.1
@@ -11,7 +7,7 @@ PORTREVISION=	3
 CATEGORIES=	devel
 MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/${PORTNAME}-${PORTVERSION}
 
-MAINTAINER=	skv@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Generic configuration management library
 
 LIB_DEPENDS=	strfunc.9:${PORTSDIR}/devel/libstrfunc
