--- a/textproc/docbook-xml-440/Makefile
+++ b/textproc/docbook-xml-440/Makefile
@@ -1,7 +1,4 @@
-# New ports collection makefile for:	docbook-xml-440
-# Date created:		16 April 2005
-# Whom:			Sergey Skvortsov <skv@protey.ru>
-#
+# Created by: Sergey Skvortsov <skv@protey.ru>
 # $FreeBSD$
 
 PORTNAME=	docbook-xml
@@ -10,7 +7,7 @@ PORTREVISION=	1
 CATEGORIES=	textproc
 MASTER_SITES=	http://www.oasis-open.org/docbook/xml/${PORTVERSION}/
 
-MAINTAINER=	skv@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	DocBook/XML DTD V4.4, designed for technical documentation
 
 RUN_DEPENDS=	${XMLCATMGR}:${PORTSDIR}/textproc/xmlcatmgr
