--- a/www/google-sitemapgen/Makefile
+++ b/www/google-sitemapgen/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	google-sitemapgen
-# Date created:	   09 June 2005
-# Whom:		   Sergey Skvortsov <skv@protey.ru>
-#
+# Created by: Sergey Skvortsov <skv@protey.ru>
 # $FreeBSD$
-#
 
 PORTNAME=	google-sitemapgen
 PORTVERSION=	1.5
@@ -11,7 +7,7 @@ CATEGORIES=	www devel
 MASTER_SITES=	GOOGLE_CODE
 DISTNAME=	sitemap_gen_${PORTVERSION}
 
-MAINTAINER=	skv@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Script to analyze web server and generate Google Sitemap files
 
 PROJECTHOST=	sitemap-generators
