--- a/www/htmlcompressor/Makefile
+++ b/www/htmlcompressor/Makefile
@@ -7,7 +7,7 @@ CATEGORIES=	www java
 MASTER_SITES=	GOOGLE_CODE
 DISTNAME=	${PORTNAME}-${PORTVERSION}-src
 
-MAINTAINER=	skv@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	HTML/XML Compressor
 
 LICENSE=	AL2
