--- a/www/twiki-BugzillaLinkPlugin/Makefile
+++ b/www/twiki-BugzillaLinkPlugin/Makefile
@@ -1,16 +1,12 @@
-# New ports collection makefile for:	twiki-BugzillaLinkPlugin
-# Date created:		16 Jun 2008
-# Whom:			Sergey Skvortsov <skv@protey.ru>
-#
+# Created by: Sergey Skvortsov <skv@protey.ru>
 # $FreeBSD$
-#
 
 PORTNAME=	BugzillaLinkPlugin
 SVNREV=		15560
 MASTER_SITES=	http://protey.ru/freebsd/distfiles/ \
 		${MASTER_SITE_LOCAL:S!$!skv/!}
 
-MAINTAINER=	skv@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Link to Bugzilla bugs using shorthand references
 
 .include "${.CURDIR}/../twiki/bsd.twiki.mk"
