--- a/www/twiki-GluePlugin/Makefile
+++ b/www/twiki-GluePlugin/Makefile
@@ -1,16 +1,12 @@
-# New ports collection makefile for:	twiki-GluePlugin
-# Date created:		9 Jan 2009
-# Whom:			Sergey Skvortsov <skv@protey.ru>
-#
+# Created by: Sergey Skvortsov <skv@protey.ru>
 # $FreeBSD$
-#
 
 PORTNAME=	GluePlugin
 SVNREV=		15708
 MASTER_SITES=	http://protey.ru/freebsd/distfiles/ \
 		${MASTER_SITE_LOCAL:S!$!skv/!}
 
-MAINTAINER=	skv@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Allow to format tags and arguments on multiple lines
 
 .include "${.CURDIR}/../twiki/bsd.twiki.mk"
