--- a/www/twiki-LdapContrib/Makefile
+++ b/www/twiki-LdapContrib/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	twiki-LdapContrib
-# Date created:		10 Jun 2008
-# Whom:			Sergey Skvortsov <skv@protey.ru>
-#
+# Created by: Sergey Skvortsov <skv@protey.ru>
 # $FreeBSD$
-#
 
 PORTNAME=	LdapContrib
 SVNREV=		16840
@@ -11,7 +7,7 @@ PORTREVISION=	1
 MASTER_SITES=	http://protey.ru/freebsd/distfiles/ \
 		${MASTER_SITE_LOCAL:S!$!skv/!}
 
-MAINTAINER=	skv@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	LDAP services for TWiki
 
 RUN_DEPENDS=	p5-perl-ldap>=0:${PORTSDIR}/net/p5-perl-ldap
