--- a/www/twiki-LdapNgPlugin/Makefile
+++ b/www/twiki-LdapNgPlugin/Makefile
@@ -1,16 +1,12 @@
-# New ports collection makefile for:	twiki-LdapNgPlugin
-# Date created:		16 Jun 2008
-# Whom:			Sergey Skvortsov <skv@protey.ru>
-#
+# Created by: Sergey Skvortsov <skv@protey.ru>
 # $FreeBSD$
-#
 
 PORTNAME=	LdapNgPlugin
 SVNREV=		15577
 MASTER_SITES=	http://protey.ru/freebsd/distfiles/ \
 		${MASTER_SITE_LOCAL:S!$!skv/!}
 
-MAINTAINER=	skv@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Query and display data from an LDAP directory
 
 TWDEP=		LdapContrib>=0
