--- a/www/twiki-NewUserPlugin/Makefile
+++ b/www/twiki-NewUserPlugin/Makefile
@@ -1,16 +1,12 @@
-# New ports collection makefile for:	twiki-NewUserPlugin
-# Date created:		9 Jan 2009
-# Whom:			Sergey Skvortsov <skv@protey.ru>
-#
+# Created by: Sergey Skvortsov <skv@protey.ru>
 # $FreeBSD$
-#
 
 PORTNAME=	NewUserPlugin
 SVNREV=		17515
 MASTER_SITES=	http://protey.ru/freebsd/distfiles/ \
 		${MASTER_SITE_LOCAL:S!$!skv/!}
 
-MAINTAINER=	skv@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Create user's topic for externally authenticated users
 
 .include "${.CURDIR}/../twiki/bsd.twiki.mk"
