- Make qt4 compile under FreeBSD 10
Approved by:	makc @#kde-freebsd/freenode


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316233 35697150-7ecd-e111-bb59-0022644237b5

--- a/x11-toolkits/qt4-gui/Makefile
+++ b/x11-toolkits/qt4-gui/Makefile
@@ -18,6 +18,7 @@ QT_NONSTANDARD=	yes
 QT_DIST=	yes
 MAKE_JOBS_SAFE=	yes
 
+USE_GCC=	any
 HAS_CONFIGURE=	yes
 USE_PKGCONFIG=	build
 USE_LDCONFIG=	${PREFIX}/lib/qt4
