--- a/x11/qt4-opengl/Makefile
+++ b/x11/qt4-opengl/Makefile
@@ -14,6 +14,7 @@ QT_NONSTANDARD=	yes
 QT_DIST=	yes
 MAKE_JOBS_SAFE=	yes
 
+USE_GCC=	any
 HAS_CONFIGURE=	yes
 USE_LDCONFIG=	${PREFIX}/lib/qt4
 USE_GL=		gl
