--- a/x11-wm/e16/Makefile
+++ b/x11-wm/e16/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	e16
-PORTVERSION=	1.0.12
+PORTVERSION=	1.0.13
 CATEGORIES=	x11-wm enlightenment
 MASTER_SITES=	SF/enlightenment/${PORTNAME}/${PORTVERSION}/
 
@@ -22,6 +22,7 @@ USE_AUTOTOOLS=	libtool
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--disable-dependency-tracking \
 		--disable-rpath --enable-mans SHELL=/bin/sh
+CFLAGS+=	-g -O0
 
 .include <bsd.port.options.mk>
 
