- Update to 0.91 - Add OPTIONs to chose whether to use FOX-1.6 or FOX-1.7 - Switch to GitHub as a MASTER_SITE
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316238 35697150-7ecd-e111-bb59-0022644237b5

--- a/editors/fxite/Makefile
+++ b/editors/fxite/Makefile
@@ -2,29 +2,50 @@
 # $FreeBSD$
 
 PORTNAME=	fxite
-PORTVERSION=	0.9
+PORTVERSION=	0.91
 CATEGORIES=	editors
-MASTER_SITES=	${MASTER_SITE_GOOGLE_CODE}
 
 MAINTAINER=	gahr@FreeBSD.org
 COMMENT=	An advanced cross-platform text editor
 
-LIB_DEPENDS=	FOX-1.6:${PORTSDIR}/x11-toolkits/fox16
+LIB_DEPENDS=	#
 
-USE_GETTEXT=	yes
+OPTIONS_SINGLE=		FOX
+OPTIONS_SINGLE_FOX=	FOX16 FOX17
+FOX16_DESC=		Use FOX 1.6
+FOX17_DESC=		Use FOX 1.7
+OPTIONS_DEFAULT=	FOX16
+
+USE_GITHUB=	yes
+GH_ACCOUNT=	yetanothergeek
+GH_TAGNAME=	FXITE-0_91
+GH_COMMIT=	c2ecac3
+
 USE_LUA=	yes
-USE_GNOME=	pkgconfig
-GNU_CONFIGURE=	yes
-CXXFLAGS+=	-g -O0 -fPIC
+USE_PKGCONFIG=	build
+USE_AUTOTOOLS=	aclocal autoconf automake
+ACLOCAL_ARGS=	--force -I m4
+AUTOMAKE_ARGS=	--gnu --add-missing --copy
+USE_GMAKE=	yes
+CXXFLAGS+=	-fPIC
 LDFLAGS+=	-L${LOCALBASE}/lib -lintl
 CONFIGURE_ARGS+=--with-system-lua \
 		--with-lua-pkg=lua-${LUA_VER}
+CONFIGURE_ENV+=	FOX_CFLAGS="${FOX_CFLAGS}" \
+		FOX_LIBS="${FOX_LIBS}"
 
-.include <bsd.port.pre.mk>
+.include <bsd.port.options.mk>
 
-.if ${OSVERSION} < 800067
-LIB_DEPENDS+=	getline.1:${PORTSDIR}/devel/libgetline
-LDFLAGS+=	-lgetline
+.if ${PORT_OPTIONS:MFOX16}
+LIB_DEPENDS+=	FOX-1.6:${PORTSDIR}/x11-toolkits/fox16
+FOX_CFLAGS+=	`fox-config --cflags`
+FOX_LIBS+=	`fox-config --libs`
+.endif
+
+.if ${PORT_OPTIONS:MFOX17}
+LIB_DEPENDS+=	FOX-1.7:${PORTSDIR}/x11-toolkits/fox17
+FOX_CFLAGS+=	`pkgconf fox17 --cflags`
+FOX_LIBS+=	`pkgconf fox17 --libs`
 .endif
 
 PLIST_FILES=	bin/fxite \
@@ -32,8 +53,4 @@ PLIST_FILES=	bin/fxite \
 		share/applications/fxite.desktop
 PLIST_DIRSTRY=	share/applications
 
-post-patch:
-	${REINPLACE_CMD} -e 's|%%LOCALBASE%%|${LOCALBASE}|g' \
-	   ${WRKSRC}/${CONFIGURE_SCRIPT}
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
