- Add timestamps option (used by netperf-wrapper) [1] - Fix fping issue with the unreachable ip in the arp cache [2] - Convert Makefile headers to new style
PR:	ports/177368 [1]
PR:	ports/176439 [2]
Submitted by:	Lars Eggert <lars@eggert.org> [1], Alexandre RAYNAUD <alexandre.raynaud@sallanches.fr> [2]
Approved by:	Jason Harris <jharris@widomaker.com> (maintainer)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316242 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/fping/Makefile
+++ b/net/fping/Makefile
@@ -1,22 +1,23 @@
-# ex:ts=8
-# Ports collection makefile for:  fping
-# Date created:			  Tue Mar 25, 1997
-# Whom:				  David O'Brien (obrien@NUXI.com)
-#
+# Created by: David O'Brien (obrien@NUXI.com)
 # $FreeBSD$
-#
 
 PORTNAME=	fping
 PORTVERSION=	3.4
+PORTREVISION=	1
 CATEGORIES=	net ipv6
-MASTER_SITES=   http://fping.org/dist/
+MASTER_SITES=	http://fping.org/dist/
+
+PATCH_SITES=	https://raw.github.com/tohojo/netperf-wrapper/master/misc/
+PATCH_DIST_STRIP=	-p1
 
 MAINTAINER=	jharris@widomaker.com
 COMMENT=	Quickly ping N hosts w/o flooding the network
 
+OPTIONS_DEFINE=		TIMESTAMPS
 OPTIONS_MULTI=		NET
 OPTIONS_MULTI_NET=	IPV4 IPV6
 OPTIONS_DEFAULT=	IPV4
+TIMESTAMPS_DESC=	Enable timestamps
 
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--bindir="${PREFIX}/sbin"
@@ -37,6 +38,10 @@ PLIST_FILES+=sbin/fping6
 MAN8+=	fping6.8
 .else
 CONFIGURE_ARGS+=--disable-ipv6
+.endif
+
+.if ${PORT_OPTIONS:MTIMESTAMPS}
+PATCHFILES+=	fping_timestamps.patch
 .endif
 
 post-install:
