--- a/emulators/linux_base-f10/Makefile
+++ b/emulators/linux_base-f10/Makefile
@@ -110,14 +110,10 @@ NO_WRKSUBDIR=		yes
 DISTINFO_FILE?=		${MASTERDIR}/distinfo.${LINUX_RPM_ARCH}
 PLIST_SUB=		GLIBCVER="2.9"
 
-RPM2CPIO?=		${LOCALBASE}/bin/rpm2cpio
-
-EXTRACT_DEPENDS+=	${RPM2CPIO}:${PORTSDIR}/archivers/rpm
-
 EXTRACT_ONLY=		${BIN_DISTFILES}
-EXTRACT_CMD?=		${RPM2CPIO}
-EXTRACT_BEFORE_ARGS?=
-EXTRACT_AFTER_ARGS?=	| ${CPIO} -id --quiet
+EXTRACT_CMD?=		${TAR}
+EXTRACT_BEFORE_ARGS?=	-xf
+EXTRACT_AFTER_ARGS?=
 
 .include <bsd.port.pre.mk>
 
