--- a/misc/qmetro/Makefile
+++ b/misc/qmetro/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	qmetro
-PORTVERSION=	0.5.7
+PORTVERSION=	0.6.5
 CATEGORIES=	misc graphics
 MASTER_SITES=	SF/${PORTNAME}/source/
 
@@ -12,7 +12,10 @@ COMMENT=	Map of the transport system for many city subways
 LICENSE=	GPLv2
 
 USE_ZIP=	yes
-USE_QT4=	gui xml qmake_build uic_build moc_build rcc_build
+INSTALLS_ICONS=	yes
+USE_QT4=	gui xml qmake_build uic_build moc_build multimedia \
+		rcc_build
+USE_DOS2UNIX=	rc/alarm.pri
 
 do-configure:
 	cd ${WRKSRC} && ${QMAKE} ${QMAKEFLAGS} PREFIX=${PREFIX}
