- pass maintainer to Mikhail Tsatsenko <m.tsatsenko@gmail.com>   requested here:   http://lists.freebsd.org/pipermail/freebsd-ports/2013-April/082988.html
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316256 35697150-7ecd-e111-bb59-0022644237b5

--- a/databases/pgbouncer/Makefile
+++ b/databases/pgbouncer/Makefile
@@ -6,7 +6,7 @@ PORTVERSION=	1.5.2
 CATEGORIES=	databases
 MASTER_SITES=	http://pgfoundry.org/frs/download.php/3293/
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	m.tsatsenko@gmail.com
 COMMENT=	Lightweight connection pooler for PostgreSQL
 
 LICENSE=	BSD
