- Update to 0.9.7. - Update license.  It is now dual-licensed under MPL2+ and LGPL2.1+. - Trim Makefile header.
Approved by:	fluffy (maintainer)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316259 35697150-7ecd-e111-bb59-0022644237b5

--- a/textproc/libwpd/Makefile
+++ b/textproc/libwpd/Makefile
@@ -1,19 +1,16 @@
-# New ports collection makefile for:    libwpd
-# Date created:         Mon May 19 09:09:10 PDT 2003
-# Whom:                 reed@pugetsoundtechnology.com
-#
+# Created by: reed@pugetsoundtechnology.com
 # $FreeBSD$
-#
 
 PORTNAME=	libwpd
-PORTVERSION=	0.9.6
+PORTVERSION=	0.9.7
 CATEGORIES=	textproc
 MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/${PORTNAME}-${PORTVERSION}
 
 MAINTAINER=	fluffy@FreeBSD.org
 COMMENT=	Tools for importing and exporting WordPerfect(tm) documents
 
-LICENSE=	LGPL21
+LICENSE=	LGPL21 MPL
+LICENSE_COMB=	dual
 
 USE_BZIP2=	yes
 GNU_CONFIGURE=	yes
