--- a/graphics/libwpg/Makefile
+++ b/graphics/libwpg/Makefile
@@ -1,20 +1,15 @@
-# New ports collection makefile for:	graphics/libwpg
-# Date created:		2009-01-09
-# Whom:			Dima Panov <fluffy@Fluffy.Khv.RU>
-#
 # $FreeBSD$
-#
 
 PORTNAME=	libwpg
-PORTVERSION=	0.2.1
-PORTREVISION=	2
+PORTVERSION=	0.2.2
 CATEGORIES=	graphics
 MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/${PORTNAME}-${PORTVERSION}
 
 MAINTAINER=	fluffy@FreeBSD.org
 COMMENT=	Library and tools to work with WordPerfect Graphics (WPG) files
 
-LICENSE=	LGPL20
+LICENSE=	LGPL21 MPL
+LICENSE_COMB=	dual
 
 LIB_DEPENDS=	wpd-0.9:${PORTSDIR}/textproc/libwpd
 
@@ -28,12 +23,11 @@ CONFIGURE_ARGS=	--disable-werror
 
 OPTIONS_DEFINE=	DOCS
 
-PORTDOCS=	*
-
 .include <bsd.port.options.mk>
 
 .if ${PORT_OPTIONS:MDOCS}
 BUILD_DEPENDS+=	doxygen:${PORTSDIR}/devel/doxygen
+PORTDOCS=	*
 .else
 post-patch:
 	@${REINPLACE_CMD} -E '/^SUBDIRS = /s/docs//g' ${WRKSRC}/Makefile.in
