Update tilp2 and its libraries: - tilp2 1.17 - libticables2 1.3.4, libticalcs2 1.1.8, libticonv 1.1.4, libtifiles2 1.1.6 - Add NLS option, remove libtool dependency, clean up Makefile and pkg-descr - Bump PORTREVISION and trim Makefile header for emulators/tilem and   emulators/tiemu3.
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316269 35697150-7ecd-e111-bb59-0022644237b5

--- a/comms/libticables2/Makefile
+++ b/comms/libticables2/Makefile
@@ -1,43 +1,37 @@
-# New ports collection makefile for:	libticables2
-# Date created:		11 October 2006
-# Whom:			Tijl Coosemans <tijl@ulyssis.org>
-#
 # $FreeBSD$
-#
 
 PORTNAME=	libticables2
-PORTVERSION=	1.3.3
+PORTVERSION=	1.3.4
 CATEGORIES=	comms
-MASTER_SITES=	SF/tilp/tilp2-linux/tilp2-1.16
+MASTER_SITES=	SF/tilp/tilp2-linux/tilp2-1.17
 
 MAINTAINER=	tijl@coosemans.org
 COMMENT=	TI calculator link cables library
 
 LICENSE=	GPLv2
 
-USE_AUTOTOOLS=	libtool
 USE_BZIP2=	yes
 USE_GMAKE=	yes
-USE_GNOME=	glib20 gnomehack pkgconfig
+USE_GNOME=	glib20
 USE_LDCONFIG=	yes
+USE_PKGCONFIG=	build
+USES=		pathfix
 
-.if !defined(WITHOUT_NLS)
-USE_GETTEXT=	yes
-PLIST_SUB=	NLS=""
-.else
-CONFIGURE_ARGS=	--disable-nls
-PLIST_SUB=	NLS="@comment "
-.endif
+OPTIONS_DEFINE=	NLS
 
+GNU_CONFIGURE=	yes
+CONFIGURE_ENV=	LIBUSB_CFLAGS=" " LIBUSB_LIBS="-lusb"
 CPPFLAGS+=	-I${LOCALBASE}/include
 LDFLAGS+=	-L${LOCALBASE}/lib
 
-.include <bsd.port.pre.mk>
+.include <bsd.port.options.mk>
 
-.if ${OSVERSION} >= 800069
-CONFIGURE_ENV+=	LIBUSB_CFLAGS=" " LIBUSB_LIBS="-lusb"
+.if ${PORT_OPTIONS:MNLS}
+USE_GETTEXT=	yes
+PLIST_SUB+=	NLS=""
 .else
-LIB_DEPENDS+=	usb-0.1.8:${PORTSDIR}/devel/libusb
+CONFIGURE_ARGS+=--disable-nls
+PLIST_SUB+=	NLS="@comment "
 .endif
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
