--- a/converters/libticonv/Makefile
+++ b/converters/libticonv/Makefile
@@ -1,27 +1,21 @@
-# New ports collection makefile for:	libticonv
-# Date created:		5 October 2006
-# Whom:			Tijl Coosemans <tijl@ulyssis.org>
-#
 # $FreeBSD$
-#
 
 PORTNAME=	libticonv
-PORTVERSION=	1.1.3
+PORTVERSION=	1.1.4
 CATEGORIES=	converters
-MASTER_SITES=	SF/tilp/tilp2-linux/tilp2-1.16
+MASTER_SITES=	SF/tilp/tilp2-linux/tilp2-1.17
 
 MAINTAINER=	tijl@coosemans.org
 COMMENT=	TI calculator character set library
 
 LICENSE=	GPLv2
 
-USE_AUTOTOOLS=	libtool
+GNU_CONFIGURE=	yes
 USE_BZIP2=	yes
 USE_GMAKE=	yes
-USE_GNOME=	glib20 gnomehack pkgconfig
+USE_GNOME=	glib20
 USE_LDCONFIG=	yes
-USE_ICONV=	yes
-
-CPPFLAGS+=	-I${LOCALBASE}/include
+USE_PKGCONFIG=	build
+USES=		pathfix
 
 .include <bsd.port.mk>
