--- a/devel/libtifiles2/Makefile
+++ b/devel/libtifiles2/Makefile
@@ -1,37 +1,42 @@
-# New ports collection makefile for:	libtifiles2
-# Date created:		11 October 2006
-# Whom:			Tijl Coosemans <tijl@ulyssis.org>
-#
 # $FreeBSD$
-#
 
 PORTNAME=	libtifiles2
-PORTVERSION=	1.1.5
+PORTVERSION=	1.1.6
 CATEGORIES=	devel
-MASTER_SITES=	SF/tilp/tilp2-linux/tilp2-1.16
+MASTER_SITES=	SF/tilp/tilp2-linux/tilp2-1.17
 
 MAINTAINER=	tijl@coosemans.org
 COMMENT=	TI calculator file types library
 
 LICENSE=	GPLv2
 
-LIB_DEPENDS=	ticonv.6:${PORTSDIR}/converters/libticonv
+LIB_DEPENDS=	ticonv:${PORTSDIR}/converters/libticonv
 
-USE_AUTOTOOLS=	libtool
 USE_BZIP2=	yes
 USE_GMAKE=	yes
-USE_GNOME=	glib20 gnomehack pkgconfig
+USE_GNOME=	glib20
 USE_LDCONFIG=	yes
+USE_PKGCONFIG=	build
+USES=		pathfix
 
-.if !defined(WITHOUT_NLS)
-USE_GETTEXT=	yes
-PLIST_SUB=	NLS=""
-.else
-CONFIGURE_ARGS=	--disable-nls
-PLIST_SUB=	NLS="@comment "
-.endif
+OPTIONS_DEFINE=	NLS
 
+GNU_CONFIGURE=	yes
+CONFIGURE_ENV=	ARCHIVE_CFLAGS=" " ARCHIVE_LIBS="-larchive"
 CPPFLAGS+=	-I${LOCALBASE}/include
 LDFLAGS+=	-L${LOCALBASE}/lib
+
+.include <bsd.port.options.mk>
+
+.if ${PORT_OPTIONS:MNLS}
+USE_GETTEXT=	yes
+PLIST_SUB+=	NLS=""
+.else
+CONFIGURE_ARGS+=--disable-nls
+PLIST_SUB+=	NLS="@comment "
+.endif
+
+post-patch:
+	@${REINPLACE_CMD} 's,libarchive,,' ${WRKSRC}/tifiles2.pc.in
 
 .include <bsd.port.mk>
