- use bsd.port.options.mk PR:		177324
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316273 35697150-7ecd-e111-bb59-0022644237b5

--- a/graphics/hobbes-icons-xpm/Makefile
+++ b/graphics/hobbes-icons-xpm/Makefile
@@ -16,18 +16,20 @@ NO_BUILD=	yes
 # Where it will be installed (change pkg/PLIST if you change this)
 LIBDIR=		${PREFIX}/include/X11/pixmaps
 
+.include <bsd.port.options.mk>
+
 do-install:
-	@${MKDIR} ${LIBDIR}
+	${MKDIR} ${LIBDIR}
 	${CP} -R ${WRKSRC}/* ${LIBDIR}
 	${CHOWN} -R ${BINOWN}:${BINGRP} ${LIBDIR}
 	-${RM} ${LIBDIR}/README
 	-${RM} ${LIBDIR}/readem.shar
 
+.if ${PORT_OPTIONS:MDOCS}
 post-install:
-.if !defined(NOPORTDOCS)
-	@${MKDIR} ${DOCSDIR}
-	@${INSTALL_DATA} ${WRKSRC}/README ${DOCSDIR}
-	@${INSTALL_SCRIPT} ${WRKSRC}/*.shar ${DOCSDIR}
+	${MKDIR} ${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC}/README ${DOCSDIR}/
+	${INSTALL_SCRIPT} ${WRKSRC}/*.shar ${DOCSDIR}/
 .endif
 
 .include <bsd.port.mk>
